--- a/Changes
+++ b/Changes
@@ -1,3 +1,11 @@
+    BabelKit Release Versions
+    -------------------------
+
+BabelKit-1.07 released 2003.05.12
+
+Moved Perl regression testing from t/test.t
+to regression.test.  test.pl now succeeds and is
+CPAN friendly.  Licenced under Perl or LGPL.
 
 BabelKit-1.06 released 2003.05.07
 
