--- a/README
+++ b/README
@@ -1,5 +1,8 @@
 
-BabelKit Version 1.06 released 2003.05.07.
+BabelKit Universal Multilingual Database Code Table
+---------------------------------------------------
+
+BabelKit Version 1.07 released 2003.05.12.
 
 BabelKit is an interface to a universal multilingual
 database code table. BabelKit takes all of the
@@ -40,8 +43,5 @@ to report bugs, request features, or for database
 design and programming assistance.
 
 Copyright (C) 2003 John Gorman.  All rights reserved.
-This program is free software; you can redistribute
-it and/or modify it under the Lesser GNU General Public
-License (LGPL) of the Free Software Foundation.
-This means that you can use it for any project.
-If you do, send me a note saying how it went!
+This program is free software; you can redistribute it
+and/or modify it under the same terms as Perl or the LGPL.
